--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@ form {
     justify-items: stretch;
     font-family: Sans-serif;
     color: #333;
-    margin: 150px 170px 50px 775px;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-bottom: auto;
+    margin-right: auto;
     align-items: center;
     border: 10px;
     border-color: black;
@@ -14,7 +17,70 @@ form {
 
 }
 
+#name{
+    height: 25px;
+}
+
+
+#tel{
+    height: 25px;
+}
+
+
+#email{
+    height: 25px;
+}
+
+
 #message{
     width: 900px;
     height: 335px;
+}
+
+
+h1 {
+    text-align: center;
+}
+
+.erro {
+    color: #F44;
+}
+
+fieldset {
+    border: 3px double #333;
+    color: #000;
+    margin: 10px 0 0 0;
+}
+
+label {
+    display: block;
+    margin: 10px 0 0 0;
+    width: 100%;
+}
+
+input[type=text], textarea {
+    width: 100%;
+    border: 1px solid #333;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+input[type=submit] {
+    float: right;
+    clear: both;
+}
+
+table {
+    width: 40%;
+    margin-left: 30%;
+}
+
+table th {
+    background-color: #EEE;
+    font-size: 18px;
+}
+
+table td {
+    border-bottom: 1px solid #333;
+    color: #000;
 }
